--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap"
       rel="stylesheet"
     />
     <title>Pizza 4 U</title>
@@ -30,14 +32,14 @@
     </header>
     <main>
       <section>
-        <div class="card">
-          <p>Free delivery for<span>buying</span> 2 pizzas</p>
+        <div class="card card-one">
+          <p>Free delivery for <span>buying</span> 2 pizzas</p>
           <img src="images/delivery.svg" />
         </div>
-        <div class="card">
-          <p>Pizza podiums</p>
-          <div>
-            <p>Top 5 - Pizzas</p>
+        <div class="card card-two">
+          <p class="card-two-main-title">Pizza podium</p>
+          <p class="card-two-content-title">Top 5 - Pizzas</p>
+          <div class="card-two-items">
             <ol>
               <li>Muzzarella</li>
               <li>Hawaiana</li>
